--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                           </div> 
                       </div>
                       <div class="columna columna-50  columna-mb-100 padding-grande columna-cocinero-info">
-                          <a href ="imgg/menu de niños.jpg"><h2>Menú para niños</h2></a>
+                          <a href ="imgg/menu de ninos.jpg"><h2>Menú para niños</h2></a>
                           
                       </div>   
                   </div>
